# cookiecutter-pypackage

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cookiecutter.json  pyproject.toml  requirements.txt
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .coveragerc  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  MANIFEST.in  Makefile  README.md  codecov.yml  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/docs/: index.md
{{cookiecutter.project_slug}}/src/: cli.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  cli.py  main.py
{{cookiecutter.project_slug}}/tests/{{cookiecutter.project_slug}}/: __init__.py  test_cli.py  test_main.py
