[metadata]
name = {{ cookiecutter.project_slug }}
description = {{ cookiecutter.project_short_description }}
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
author = {{ cookiecutter.full_name.replace('\"', '\\\"') }}"
author_email = {{ cookiecutter.email }}
license = ISC
license_file = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: ISC License (ISCL)
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = {{ cookiecutter.project_slug }}
project_urls =
    Bug Tracker = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues
use_scm_version = True

[options]
packages = find:
install_requires =
    typer
python_requires = >=3.6
include_package_data = True
package_dir =
    = src
setup_requires =
    setuptools-scm
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    {{ cookiecutter.project_slug }} = {{ cookiecutter.project_slug }}.cli:app

[options.extras_require]
dev =
    black
    build
    flake8
    ipython
    mypy
    pre-commit
    tox
    twine
    types-setuptools
docs =
    mkdocs
test =
    pre-commit
    pytest
    pytest-cov

[bdist_wheel]
universal = 1
